[package]
name = "standalone-syn"
version = "0.12.10" # don't forget to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Fork of syn that uses rustc-ap-proc_macro and standalone-* so as to remove the rustc dylib dependency"
repository = "https://github.com/staktrace/standalone-syn"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[[example]]
name = "dump-syntax"
path = "examples/dump-syntax/main.rs"
required-features = ["full", "parsing", "extra-traits"]

[features]
default = ["derive", "parsing", "printing", "clone-impls"]
derive = []
full = []
parsing = []
printing = ["standalone-quote"]
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []

[dependencies]
standalone-quote = { version = "0.4.2", optional = true }
rustc-ap-proc_macro = "40.0.0"
standalone-proc-macro2 = "0.2.2"
unicode-xid = "0.1"

[dev-dependencies]
rayon = "0.9"
walkdir = "1.0.1"

[package.metadata.docs.rs]
all-features = true
