[package]
name = "standalone-syn"
version = "0.13.0" # don't forget to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Fork of syn that turns of the proc-macro feature in proc-macro2 and standalone-quote so as to remove the rustc dylib dependency"
repository = "https://github.com/staktrace/standalone-syn"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[[example]]
name = "dump-syntax"
path = "examples/dump-syntax/main.rs"
required-features = ["full", "parsing", "extra-traits"]

[features]
default = ["derive", "parsing", "printing", "clone-impls", "proc-macro"]
derive = []
full = []
parsing = []
printing = ["standalone-quote"]
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
proc-macro = ["proc-macro2/proc-macro", "standalone-quote/proc-macro"]

[dependencies]
standalone-quote = { version = "0.5.0", optional = true, default-features = false }
proc-macro2 = { version = "0.2.3", default-features = false }
unicode-xid = "0.1"

[dev-dependencies]
rayon = "1.0.0"
walkdir = "1.0.1"

[package.metadata.docs.rs]
all-features = true
